# SkyDesk2

./: .env  .gitignore  .prettierrc  LICENSE  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1732673340312-b8bd54cbb1e91.mjs
.github/workflows/: release.yml
src/: App.vue  main.ts
src-tauri/: .gitignore  2  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json  httpserver.json  taskbar.json
src-tauri/icons/: icon.icns
src-tauri/icons/capture/: windows.rs
src-tauri/lib/: CPPdll.lib
src-tauri/src/: audio.rs  calendar.rs  capture.rs  clipboard.rs  desktop.rs  dropfile.rs  ffmpeg_video.rs  hovertop.rs  icotopng.rs  key.rs  lib.rs  libre_hardware_monitor.rs  lockscreen.rs  main.rs  monitor.rs  music.rs  netspeed.rs  search.rs  server.rs  shell.rs  shelllink.rs  smtc.rs  sysinfo.rs  taskbar.rs  wallpaper.rs  wheel.rs
src/api/: api.ts  download.ts  weather.ts
src/components/: ButtonBox.vue  Dismiss.vue  GridContainer.vue  Minus.vue  Month.vue  MusicDisk.vue  MusicTape.vue  MusicVinyl.vue  RightBar.vue  TitleBar.vue  ToggleMaximize.vue  WallpaperFall.vue  WaterFall.vue  buttonbox.vue  month.vue  wallpaperfall.vue  waterfall.vue
src/components/wallpaper/: Calendar.vue  Date.vue  Festival.vue  MusicDisk.vue  MusicTape.vue  MusicVinyl.vue  Weather.vue  WeatherD7.vue
src/functions/: autostart.ts  calendar.ts  clipboard.ts  date.ts  downfall.ts  index.ts  key.ts  lnks.ts  maininit.ts  mianinit.ts  monitor.ts  ollamaTools.ts  open.ts  peIcon.ts  sakura.ts  server.ts  setting.ts  smtc.ts  sysinfo.ts  tray.ts  updater.ts  videothumb.ts  wallpaper.ts  weather.ts  weatnerIcon.ts  window.ts
src/i18n/: index.ts
src/pages/: desktop.vue  server.vue  setting.vue  taskbar.vue
src/pages/desktop/: capture.vue  captureBtn.vue  captureWindow.vue  dragfile.vue  hovertop.vue  netspeed.vue  note.vue  search.vue  shortcut.vue  shortcutSetting.vue  taskbar.vue  tray.vue  wallpaper.vue  wallpapersetting.vue  weather.vue  wheel.vue
src/pages/setting/: calendar.vue  capture.vue  date.vue  datenote.vue  monitor.vue  note.vue  ollama.vue  shortcut.vue  system.vue  template.vue  test.vue  wallpaper.vue  webdav.vue  window.vue
src/router/: index.ts
src/stores/: capture.ts  note.ts  shortcut.ts  system.ts  wallpaper.ts  weather.ts  webdav.ts  window.ts
src/types/: desktopType.ts  netspeedType.ts  storeType.ts  webdavType.ts
~/.tauri/: myapp.key  myapp.key.pub
