[package]
name = "skydesk2"
version = "1.1.9"
description = "SkyDesk2"
authors = ["angelbests1314@live.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "skydesk2_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }
# "devtools"  "windows7-compat"
[dependencies]
tauri = { version = "2.0.2", features = ["protocol-asset", "tray-icon", "image-png", "image-ico" , "devtools"] }
tauri-plugin-shell = "2.0.1"
tauri-plugin-process = "2.0.1"
tauri-plugin-fs = "2.0.1"
tauri-plugin-dialog = "2.0.1"
tauri-plugin-clipboard-manager = "2.0.1"
tauri-plugin-http = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1.4"

# 日期
chrono = "0.4.38"

# 本地服务器
tiny_http = "0.12.0"

# 录屏库
windows-capture = "1.3.6"

image = "0.25.2"

# 系统信息
sysinfo = "0.33.0"

# 按键库
rdev = {version = "0.5.3", features = ["unstable_grab"] }

# windowsapi
[target."cfg(windows)".dependencies.windows]
version = "0.58.0"
features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_Registry",
    "Win32_System_Performance"
]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"


