[package]
name = "skydesk2"
version = "1.3.7"
description = "SkyDesk2"
authors = ["angelbests1314@live.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "skydesk2_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png", "image-ico" , "devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-fs = { version = "2.0.0", features = ["watch"] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-http = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-log = "2"
clipboard-win = "5.4.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1.4"
chrono = "0.4.38"
tiny_http = "0.12.0"
image = "0.25.2"
rand = "0.9.0"
sysinfo = "0.33.1"
log = "0.4.26"
rdev = {version = "0.5.3", features = ["unstable_grab"] }
wasapi = "0.16.0"
dav-server = "0.8.0"
tauri-plugin-upload = "2"
[target."cfg(windows)".dependencies.windows]
version = "0.61.1"
features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_GdiPlus",
    "Win32_Graphics_Imaging",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Search",
    "Win32_System_Registry",
    "Win32_System_Performance",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "System_UserProfile",
    "Media_Control",
    "Storage_Streams",
    "Storage",
    "Foundation_Collections",
    "Win32_System_LibraryLoader",
    "Win32_Storage_EnhancedStorage",
    "Win32_Storage_FileSystem"
]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2.3.0"
tauri-plugin-updater = "2"
